istio/services/cart/cart-pa.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cart-mtls
  namespace: k8s
spec:
  selector:
    matchLabels:
      app: cart-service
  mtls:
    mode: STRICT
